LUCENE-1614: switch next -> nextDoc, skipTo -> advance, doc -> docID in DISI
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/trunk@782410 13f79535-47bb-0310-9956-ffa450edef68